[gd_scene load_steps=2 format=3 uid="uid://c11gwcrvmmv72"]

[ext_resource type="Script" path="res://Scripts/outside_spawner.gd" id="1_kj3xs"]

[node name="outside_spawner" type="Node2D"]
script = ExtResource("1_kj3xs")

[node name="spawn_1" type="Marker2D" parent="."]

[node name="spawn_2" type="Marker2D" parent="."]

[node name="spawn_3" type="Marker2D" parent="."]

[node name="spawn_4" type="Marker2D" parent="."]

[node name="spawn_5" type="Marker2D" parent="."]

[node name="spawn_6" type="Marker2D" parent="."]

[node name="spawn_7" type="Marker2D" parent="."]

[node name="spawn_8" type="Marker2D" parent="."]
